@@ -19,7 +19,9 @@ package com.google.android.accessibility.utils.output;
 import static android.speech.tts.TextToSpeech.LANG_AVAILABLE;
 import static android.speech.tts.TextToSpeech.LANG_COUNTRY_AVAILABLE;
 import static android.speech.tts.TextToSpeech.LANG_COUNTRY_VAR_AVAILABLE;
+import static android.speech.tts.TextToSpeech.QUEUE_ADD;
 import static androidx.core.content.ContextCompat.RECEIVER_EXPORTED;
+import static com.google.android.accessibility.utils.output.SpeechCacheManager.CACHE_UTTERANCE_ID_PREFIX;
 import static java.util.Locale.forLanguageTag;
 
 import android.content.ComponentCallbacks;
@@ -33,11 +35,13 @@ import android.media.AudioAttributes;
 import android.media.AudioManager;
 import android.net.Uri;
 import android.os.Bundle;
+import android.os.HandlerThread;
+import android.os.Looper;
 import android.os.Message;
 import android.os.PowerManager;
 import android.os.PowerManager.WakeLock;
+import android.os.Process;
 import android.os.SystemClock;
-import android.provider.Settings;
 import android.provider.Settings.Secure;
 import android.speech.tts.TextToSpeech;
 import android.speech.tts.TextToSpeech.Engine;
@@ -47,28 +51,40 @@ import android.speech.tts.Voice;
 import android.telephony.TelephonyManager;
 import android.text.Spannable;
 import android.text.TextUtils;
+import android.text.style.LocaleSpan;
+import android.text.style.TtsSpan;
 import android.util.Log;
 import android.util.Pair;
+import androidx.annotation.VisibleForTesting;
+import androidx.annotation.WorkerThread;
 import androidx.core.content.ContextCompat;
 import com.google.android.accessibility.utils.BuildVersionUtils;
 import com.google.android.accessibility.utils.Logger;
 import com.google.android.accessibility.utils.Performance;
+import com.google.android.accessibility.utils.Performance.ChangeLocaleAction;
 import com.google.android.accessibility.utils.Performance.EventId;
 import com.google.android.accessibility.utils.SpannableUtils.IdentifierSpan;
 import com.google.android.accessibility.utils.WeakReferenceHandler;
 import com.google.android.accessibility.utils.broadcast.SameThreadBroadcastReceiver;
 import com.google.android.accessibility.utils.compat.provider.SettingsCompatUtils.SecureCompatUtils;
 import com.google.android.accessibility.utils.compat.speech.tts.TextToSpeechCompatUtils;
+import com.google.android.accessibility.utils.output.SpeechCacheManager.LoadSpeechResultNotifier;
+import com.google.android.accessibility.utils.output.SpeechCachePlayer.PlaybackStateListener;
+import com.google.android.accessibility.utils.output.SpeechCachePlayer.SpeechInfo;
 import com.google.android.libraries.accessibility.utils.log.LogUtils;
 import com.google.auto.value.AutoValue;
+import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 /**
@@ -104,8 +120,55 @@ public class FailoverTextToSpeech {
 
   public static final int VALUE_ON = 1;
 
+  // Some apps have their own rate setting and send the absolute rate
+  // Others have rate increase/decrease controls and just send the multiplier
+  public static final String RATE_PARAMETER_TYPE = "RateParameterType";
+  public static final int MULTIPLIER = 0; // This is the default
+  public static final int ABSOLUTE = 1;
+
+  /**
+   * Ensure the consecutive manipulation is thread safe. For example, to synthesize file with give
+   * locale, we need to invoke {@link TextToSpeech#setLanguage(Locale)} and {@link
+   * TextToSpeech#synthesizeToFile(CharSequence, Bundle, File, String)}.
+   */
+  private final Object ttsLock = new Object();
+
+  /** Removes the speech from the speech cache with the given {@link SpeechInfo}. */
+  void removeSpeech(SpeechInfo speechInfo) {
+    if (speechCacheManager != null) {
+      speechCacheManager.removeSpeech(speechInfo);
+    }
+  }
+
+  /** Clears the entire in-memory speech cache. */
+  void cleanCache() {
+    if (speechCacheManager != null) {
+      speechCacheManager.cleanCache();
+    }
+  }
+
+  /**
+   * Sets the voice for the TTS engine.
+   *
+   * @param voice The voice to set.
+   */
+  public void setVoice(Voice voice) {
+    if (isReady()) {
+      synchronized (ttsLock) {
+        tts.setVoice(voice);
+      }
+    }
+  }
+
+  public long getCacheSizeMb() {
+    if (speechCacheManager != null) {
+      return speechCacheManager.getCacheSizeMb();
+    }
+    return -1;
+  }
+
   /** Class defining constants used for describing speech parameters. */
-  public static class SpeechParam {
+  public static final class SpeechParam {
     /** Float parameter for controlling speech volume. Range is {0 ... 2}. */
     public static final String VOLUME = Engine.KEY_PARAM_VOLUME;
 
@@ -117,6 +180,8 @@ public class FailoverTextToSpeech {
 
     public static final String FALLBACK_LOCALE =
         "com.google.android.tts:EnableEnUsVoiceSelectionFallback";
+
+    private SpeechParam() {}
   }
 
   /**
@@ -124,7 +189,7 @@ public class FailoverTextToSpeech {
    * TextToSpeech#QUEUE_DESTROY}. To avoid a bug, we always need to use {@link
    * TextToSpeech#QUEUE_FLUSH} before using {@link #SPEECH_FLUSH_ALL} -- on Android version M only.
    */
-  private static final int SPEECH_FLUSH_ALL = 2;
+  static final int SPEECH_FLUSH_ALL = 2;
 
   /**
    * What fraction of the volume seekbar corresponds to a doubling of audio volume.
@@ -147,76 +212,92 @@ public class FailoverTextToSpeech {
    * {@link BroadcastReceiver} for determining changes in the media state used for switching the TTS
    * engine.
    */
-  private final MediaMountStateMonitor mMediaStateMonitor = new MediaMountStateMonitor();
+  private final MediaMountStateMonitor mediaStateMonitor = new MediaMountStateMonitor();
 
   /** A list of installed TTS engines. */
-  private final LinkedList<String> mInstalledTtsEngines = new LinkedList<>();
+  private final LinkedList<String> installedTtsEngines = new LinkedList<>();
 
-  private final Context mContext;
-  private final ContentResolver mResolver;
+  private final Context context;
+  private final ContentResolver resolver;
 
   /** The TTS engine. */
-  private TextToSpeech mTts;
+  private TextToSpeech tts;
 
   /** The engine loaded into the current TTS. */
-  private String mTtsEngine;
+  private String ttsEngine;
 
   /** The number of time the current TTS has failed consecutively. */
-  private int mTtsFailures;
+  private int ttsFailures;
 
   /** The package name of the preferred TTS engine. */
-  private String mDefaultTtsEngine;
+  private String defaultTtsEngine;
 
   /** The package name of the system TTS engine. */
-  private String mSystemTtsEngine;
+  private String systemTtsEngine;
 
   /** A temporary TTS used for switching engines. */
-  private @Nullable TextToSpeech mTempTts;
+  private @Nullable TextToSpeech tempTts;
 
   /** The engine loading into the temporary TTS. */
-  private @Nullable String mTempTtsEngine;
+  private @Nullable String tempTtsEngine;
 
   /** The rate adjustment specified in {@link Settings}. */
-  private float mDefaultRate;
+  private float defaultRate;
 
   /** The pitch adjustment specified in {@link Settings}. */
-  private float mDefaultPitch;
+  private float defaultPitch;
 
   private final List<FailoverTtsListener> listeners = new ArrayList<>();
 
   /** Wake lock for keeping the device unlocked while reading */
-  private WakeLock mWakeLock;
+  private WakeLock wakeLock;
 
-  private final AudioManager mAudioManager;
-  private final TelephonyManager mTelephonyManager;
+  private final AudioManager audioManager;
+  private final TelephonyManager telephonyManager;
 
-  private boolean mShouldHandleTtsCallbackInMainThread = true;
-
-  private final boolean cacheTtsLocale;
+  private boolean shouldHandleTtsCallbackInHandlerThread = true;
 
   /**
    * A buffer of N most recent utterance ids, used to ensure that a recent utterance's completion
    * handler does not unlock a WakeLock used by the currently speaking utterance.
    */
-  private LinkedList<String> mRecentUtteranceIds = new LinkedList<>(); // may contain nulls
+  private final Deque<String> recentUtteranceIds =
+      new ConcurrentLinkedDeque<>(); // may contain nulls
+
+  private final @Nullable SpeechCacheManager speechCacheManager;
 
   public FailoverTextToSpeech(Context context) {
-    this(context, /* cacheTtsLocale= */ true);
+    this(context, /* enableSpeechCache= */ false);
   }
 
-  public FailoverTextToSpeech(Context context, boolean cacheTtsLocale) {
-    mContext = context;
+  /**
+   * Constructs a {@link FailoverTextToSpeech} instance.
+   *
+   * @param context the context to use
+   * @param enableSpeechCache whether to enable local speech cache
+   */
+  public FailoverTextToSpeech(Context context, boolean enableSpeechCache) {
+    this.context = context;
     ContextCompat.registerReceiver(
-        context, mMediaStateMonitor, mMediaStateMonitor.getFilter(), RECEIVER_EXPORTED);
+        context, mediaStateMonitor, mediaStateMonitor.getFilter(), RECEIVER_EXPORTED);
+    if (enableSpeechCache) {
+      HandlerThread handlerThread =
+          new HandlerThread("SpeechCacheManager", Process.THREAD_PRIORITY_AUDIO);
+      handlerThread.start();
+      Looper looper = handlerThread.getLooper();
+      speechCacheManager = new SpeechCacheManager(context, looper);
+    } else {
+      speechCacheManager = null;
+    }
 
     final Uri defaultSynth = Secure.getUriFor(Secure.TTS_DEFAULT_SYNTH);
     final Uri defaultPitch = Secure.getUriFor(Secure.TTS_DEFAULT_PITCH);
     final Uri defaultRate = Secure.getUriFor(Secure.TTS_DEFAULT_RATE);
 
-    mResolver = context.getContentResolver();
-    mResolver.registerContentObserver(defaultSynth, false, mSynthObserver);
-    mResolver.registerContentObserver(defaultPitch, false, mPitchObserver);
-    mResolver.registerContentObserver(defaultRate, false, mRateObserver);
+    resolver = context.getContentResolver();
+    resolver.registerContentObserver(defaultSynth, false, mSynthObserver);
+    resolver.registerContentObserver(defaultPitch, false, mPitchObserver);
+    resolver.registerContentObserver(defaultRate, false, mRateObserver);
 
     registerGoogleTtsFixCallbacks();
 
@@ -229,14 +310,18 @@ public class FailoverTextToSpeech {
 
     // connect to system services
     initWakeLock(context);
-    mAudioManager = (AudioManager) mContext.getSystemService(Context.AUDIO_SERVICE);
-    mTelephonyManager = (TelephonyManager) mContext.getSystemService(Context.TELEPHONY_SERVICE);
-    this.cacheTtsLocale = cacheTtsLocale;
+    audioManager = (AudioManager) this.context.getSystemService(Context.AUDIO_SERVICE);
+    telephonyManager = (TelephonyManager) this.context.getSystemService(Context.TELEPHONY_SERVICE);
+  }
+
+  @VisibleForTesting(otherwise = VisibleForTesting.NONE)
+  protected @Nullable Looper getSpeechCacheManagerLooper() {
+    return speechCacheManager == null ? null : speechCacheManager.getLooper();
   }
 
   /** Separate function for overriding in unit tests, because WakeLock cannot be mocked. */
   protected void initWakeLock(Context context) {
-    mWakeLock =
+    wakeLock =
         ((PowerManager) context.getSystemService(Context.POWER_SERVICE))
             .newWakeLock(PowerManager.SCREEN_DIM_WAKE_LOCK | PowerManager.ON_AFTER_RELEASE, TAG);
   }
@@ -265,7 +350,7 @@ public class FailoverTextToSpeech {
    * @return {@code true} if calling {@link #speak} is expected to succeed.
    */
   public boolean isReady() {
-    return (mTts != null);
+    return (tts != null);
   }
 
   /**
@@ -274,7 +359,7 @@ public class FailoverTextToSpeech {
    * @return The localized name of the current engine.
    */
   public @Nullable CharSequence getEngineLabel() {
-    return TextToSpeechUtils.getLabelForEngine(mContext, mTtsEngine);
+    return TextToSpeechUtils.getLabelForEngine(context, ttsEngine);
   }
 
   /**
@@ -284,15 +369,15 @@ public class FailoverTextToSpeech {
    */
   @SuppressWarnings("UnusedDeclaration") // Used by analytics
   public TextToSpeech getEngineInstance() {
-    return mTts;
+    return tts;
   }
 
   /**
-   * Sets whether to handle TTS callback in main thread. If {@code false}, the callback will be
-   * handled in TTS thread.
+   * Sets whether to handle TTS callback in handler thread. If {@code false}, the callback will be
+   * handled in binder thread.
    */
-  public void setHandleTtsCallbackInMainThread(boolean shouldHandleInMainThread) {
-    mShouldHandleTtsCallbackInMainThread = shouldHandleInMainThread;
+  public void setHandleTtsCallbackInHandlerThread(boolean shouldHandleTtsCallbackInHandlerThread) {
+    this.shouldHandleTtsCallbackInHandlerThread = shouldHandleTtsCallbackInHandlerThread;
   }
 
   /**
@@ -319,7 +404,6 @@ public class FailoverTextToSpeech {
       boolean preventDeviceSleep,
       boolean flushGlobalTtsQueue,
       EventId eventId) {
-
     String utteranceId = params.get(Engine.KEY_PARAM_UTTERANCE_ID);
     addRecentUtteranceId(utteranceId);
 
@@ -333,8 +417,8 @@ public class FailoverTextToSpeech {
 
     volume *= calculateVolumeAdjustment();
 
-    if (preventDeviceSleep && mWakeLock != null && !mWakeLock.isHeld()) {
-      mWakeLock.acquire(10 * 60 * 1000L /*10 minutes*/);
+    if (preventDeviceSleep && wakeLock != null && !wakeLock.isHeld()) {
+      wakeLock.acquire(10 * 60 * 1000L /*10 minutes*/);
     }
 
     Exception failureException = null;
@@ -358,7 +442,7 @@ public class FailoverTextToSpeech {
     }
 
     if (result == TextToSpeech.ERROR) {
-      attemptTtsFailover(mTtsEngine);
+      attemptTtsFailover(ttsEngine);
     }
 
     if ((result != TextToSpeech.SUCCESS) && params.containsKey(Engine.KEY_PARAM_UTTERANCE_ID)) {
@@ -383,18 +467,18 @@ public class FailoverTextToSpeech {
 
       // If we are in a phone call...
       // (Phone call state is often reported late, missing the first utterance.)
-      if (mTelephonyManager != null) {
-        int callState = mTelephonyManager.getCallState();
+      if (telephonyManager != null) {
+        int callState = telephonyManager.getCallState();
         if (callState != TelephonyManager.CALL_STATE_IDLE) {
           // find audio stream volumes
-          if (mAudioManager != null) {
-            int volumeMusic = mAudioManager.getStreamVolume(AudioManager.STREAM_MUSIC);
+          if (audioManager != null) {
+            int volumeMusic = audioManager.getStreamVolume(AudioManager.STREAM_MUSIC);
             if (volumeMusic <= 0) {
               return 0.0f;
             }
-            int volumeVoice = mAudioManager.getStreamVolume(AudioManager.STREAM_VOICE_CALL);
-            int maxVolMusic = mAudioManager.getStreamMaxVolume(AudioManager.STREAM_MUSIC);
-            int maxVolVoice = mAudioManager.getStreamMaxVolume(AudioManager.STREAM_VOICE_CALL);
+            int volumeVoice = audioManager.getStreamVolume(AudioManager.STREAM_VOICE_CALL);
+            int maxVolMusic = audioManager.getStreamMaxVolume(AudioManager.STREAM_MUSIC);
+            int maxVolVoice = audioManager.getStreamMaxVolume(AudioManager.STREAM_VOICE_CALL);
             float volumeMusicFrac =
                 (maxVolMusic <= 0) ? -1.0f : (float) volumeMusic / (float) maxVolMusic;
             float volumeVoiceCallFrac =
@@ -407,8 +491,8 @@ public class FailoverTextToSpeech {
               // So take the Nth root of the volume difference to reduce speech
               // volume multiplier exponentially, to match the volume seekbar effect.
               float diff = volumeVoiceCallFrac - volumeMusicFrac;
-              float num_doubling_steps = diff / VOLUME_FRAC_PER_DOUBLING;
-              multiple = (float) Math.pow(2.0f, -num_doubling_steps);
+              float numberDoublingSteps = diff / VOLUME_FRAC_PER_DOUBLING;
+              multiple = (float) Math.pow(2.0f, -numberDoublingSteps);
             }
           }
         }
@@ -423,14 +507,12 @@ public class FailoverTextToSpeech {
   }
 
   private void allowDeviceSleep(@Nullable String completedUtteranceId) {
-    if (mWakeLock != null && mWakeLock.isHeld()) {
-      boolean isRecent = mRecentUtteranceIds.contains(completedUtteranceId);
-      boolean isLast =
-          !mRecentUtteranceIds.isEmpty()
-              && mRecentUtteranceIds.getLast().equals(completedUtteranceId);
+    if (wakeLock != null && wakeLock.isHeld()) {
+      boolean isRecent = recentUtteranceIds.contains(completedUtteranceId);
+      boolean isLast = Objects.equals(recentUtteranceIds.peekLast(), completedUtteranceId);
       if (completedUtteranceId == null || isLast || !isRecent) {
         try {
-          mWakeLock.release();
+          wakeLock.release();
         } catch (RuntimeException unused) {
           // Ignore: already released by timeout.
           // TODO: Log this exception from GoogleLogger.
@@ -440,15 +522,15 @@ public class FailoverTextToSpeech {
   }
 
   private void addRecentUtteranceId(String utteranceId) {
-    mRecentUtteranceIds.add(utteranceId);
-    while (mRecentUtteranceIds.size() > 10) {
-      mRecentUtteranceIds.remove();
+    recentUtteranceIds.add(utteranceId);
+    while (recentUtteranceIds.size() > 10) {
+      recentUtteranceIds.poll();
     }
   }
 
-  /** For use in unit tests */
+  @VisibleForTesting
   public List<String> getRecentUtteranceIds() {
-    return Collections.unmodifiableList(mRecentUtteranceIds);
+    return Collections.unmodifiableList(new ArrayList<>(recentUtteranceIds));
   }
 
   /** Stops speech from all applications. No utterance callbacks will be sent. */
@@ -456,7 +538,7 @@ public class FailoverTextToSpeech {
     try {
       allowDeviceSleep();
       ensureQueueFlush();
-      mTts.speak("", SPEECH_FLUSH_ALL, null);
+      tts.speak("", SPEECH_FLUSH_ALL, null);
     } catch (Exception e) {
       // Don't care, we're not speaking.
     }
@@ -466,7 +548,7 @@ public class FailoverTextToSpeech {
   public void stopFromTalkBack() {
     try {
       allowDeviceSleep();
-      mTts.speak("", TextToSpeech.QUEUE_FLUSH, null);
+      tts.speak("", TextToSpeech.QUEUE_FLUSH, null);
     } catch (Exception e) {
       // Don't care, we're not speaking.
     }
@@ -478,18 +560,59 @@ public class FailoverTextToSpeech {
    */
   public void shutdown() {
     allowDeviceSleep();
-    mContext.unregisterReceiver(mMediaStateMonitor);
+    context.unregisterReceiver(mediaStateMonitor);
     unregisterGoogleTtsFixCallbacks();
+    mHandler.removeCallbacksAndMessages(null);
 
-    mResolver.unregisterContentObserver(mSynthObserver);
-    mResolver.unregisterContentObserver(mPitchObserver);
-    mResolver.unregisterContentObserver(mRateObserver);
+    resolver.unregisterContentObserver(mSynthObserver);
+    resolver.unregisterContentObserver(mPitchObserver);
+    resolver.unregisterContentObserver(mRateObserver);
 
-    TextToSpeechUtils.attemptTtsShutdown(mTts);
-    mTts = null;
+    TextToSpeechUtils.attemptTtsShutdown(tts);
+    tts = null;
 
-    TextToSpeechUtils.attemptTtsShutdown(mTempTts);
-    mTempTts = null;
+    TextToSpeechUtils.attemptTtsShutdown(tempTts);
+    tempTts = null;
+    if (speechCacheManager != null) {
+      speechCacheManager.shutDown();
+    }
+  }
+
+  /**
+   * Primes the TTS engine for the selected voice. This is recommended to minimize latency on first
+   * synthesis.
+   */
+  public void primeTtsEngine() {
+    if (tts == null) {
+      addListener(
+          new FailoverTtsListener() {
+            @Override
+            public void onTtsInitialized(boolean wasSwitchingEngines, String enginePackageName) {
+              primeTtsEngineInternal();
+            }
+
+            @Override
+            public void onUtteranceRangeStarted(String utteranceId, int start, int end) {}
+
+            @Override
+            public void onUtteranceCompleted(String utteranceId, boolean success) {}
+          });
+    } else {
+      primeTtsEngineInternal();
+    }
+  }
+
+  private void primeTtsEngineInternal() {
+    if (tts == null) {
+      return;
+    }
+    try {
+      File tempFile = File.createTempFile("tmpsynthesize", null, context.getCacheDir());
+      tts.synthesizeToFile("1 2 3", null, tempFile, "tmpsynthesize");
+      tempFile.deleteOnExit();
+    } catch (IOException e) {
+      LogUtils.w(TAG, "Exception during TTS init:", e);
+    }
   }
 
   /**
@@ -516,84 +639,115 @@ public class FailoverTextToSpeech {
       float volume,
       boolean flushGlobalTtsQueue,
       EventId eventId) {
-    if (mTts == null) {
+    if (tts == null) {
       return TextToSpeech.ERROR;
     }
 
-    float effectivePitch = (pitch * mDefaultPitch);
-    float effectiveRate = (rate * mDefaultRate);
-
-    String utteranceId = params.get(Engine.KEY_PARAM_UTTERANCE_ID);
-    boolean isLocaleAttached = locale != null;
-    Locale previousLocale = localeInUse;
-    boolean changeLocale = false;
-    if (isLocaleAttached && !locale.equals(mLastUtteranceLocale)) {
-      localeInUse = attemptSetLanguage(locale);
-      if (localeInUse != null) {
-        mLastUtteranceLocale = locale;
-      }
-      changeLocale = true;
-    } else if (!isLocaleAttached && (mLastUtteranceLocale != null)) {
-      localeInUse = ensureSupportedLocale();
-      mLastUtteranceLocale = null;
-      changeLocale = true;
+    float effectivePitch = (pitch * defaultPitch);
+    float effectiveRate;
+    if (customFlags.containsKey(RATE_PARAMETER_TYPE)
+        && customFlags.get(RATE_PARAMETER_TYPE) == ABSOLUTE) {
+      effectiveRate = rate;
+    } else {
+      effectiveRate = rate * defaultRate;
     }
-    boolean changeToSameLocale =
-        changeLocale && previousLocale != null && previousLocale.equals(localeInUse);
-    UtteranceInfoCombo.Builder utteranceInfoCombo =
-        UtteranceInfoCombo.builder(text, localeInUse, isLocaleAttached)
-            .setFlushGlobalTtsQueue(flushGlobalTtsQueue);
 
-    if ((text instanceof Spannable)) {
-      Spannable spannable = (Spannable) text;
-      IdentifierSpan[] identifierSpans = spannable.getSpans(0, text.length(), IdentifierSpan.class);
-      if (identifierSpans.length > 0) {
-        utteranceInfoCombo.setIsSeparatorInUtterance(true);
-        for (IdentifierSpan identifierSpan : identifierSpans) {
-          spannable.removeSpan(identifierSpan);
+    synchronized (ttsLock) {
+      String utteranceId = params.get(Engine.KEY_PARAM_UTTERANCE_ID);
+      boolean isLocaleAttached = locale != null;
+      Locale previousLocale = getUsedLocale();
+      boolean changeLocale = false;
+      int queueMode = flushGlobalTtsQueue ? SPEECH_FLUSH_ALL : QUEUE_ADD;
+      if (isLocaleAttached
+          && speechCacheManager != null
+          && speechCacheManager.hasCache(
+              utteranceId, text, locale, queueMode, effectivePitch, effectiveRate)) {
+        LogUtils.d(TAG, "cached speech available, don't need to change locale");
+      } else if (isLocaleAttached && !locale.equals(mLastUtteranceLocale)) {
+        localeInUse = attemptSetLanguage(locale);
+        if (localeInUse != null) {
+          mLastUtteranceLocale = locale;
+        }
+        changeLocale = true;
+      } else if (!isLocaleAttached && (mLastUtteranceLocale != null)) {
+        localeInUse = ensureSupportedLocale();
+        mLastUtteranceLocale = null;
+        changeLocale = true;
+      }
+      int changeLocaleAction = Performance.CHANGE_LOCALE_NONE;
+      if (changeLocale) {
+        changeLocaleAction = getChangeLocaleAction(previousLocale);
+      }
+      UtteranceInfoCombo.Builder utteranceInfoCombo =
+          UtteranceInfoCombo.builder(text, localeInUse, isLocaleAttached, changeLocaleAction)
+              .setFlushGlobalTtsQueue(flushGlobalTtsQueue);
+
+      if ((text instanceof Spannable spannable)) {
+        IdentifierSpan[] identifierSpans =
+            spannable.getSpans(0, text.length(), IdentifierSpan.class);
+        if (identifierSpans.length > 0) {
+          utteranceInfoCombo.setIsSeparatorInUtterance(true);
+          for (IdentifierSpan identifierSpan : identifierSpans) {
+            spannable.removeSpan(identifierSpan);
+          }
         }
       }
-    }
 
-    if (customFlags.get(AGGRESSIVE_CHUNK) != null
-        && customFlags.get(AGGRESSIVE_CHUNK) == VALUE_ON) {
-      utteranceInfoCombo.setIsAggressiveChunking(true);
-    }
-    UtteranceInfoCombo utteranceInfo = utteranceInfoCombo.build();
-    for (FailoverTtsListener mListener : listeners) {
-      mListener.onBeforeUtteranceRequested(utteranceId, utteranceInfo);
-    }
-    int result =
-        speak(
-            text,
-            params,
-            utteranceId,
-            effectivePitch,
-            effectiveRate,
-            stream,
-            volume,
-            flushGlobalTtsQueue,
-            changeToSameLocale,
-            eventId);
+      if (customFlags.get(AGGRESSIVE_CHUNK) != null
+          && customFlags.get(AGGRESSIVE_CHUNK) == VALUE_ON) {
+        utteranceInfoCombo.setIsAggressiveChunking(true);
+      }
+      UtteranceInfoCombo utteranceInfo = utteranceInfoCombo.build();
+      for (FailoverTtsListener mListener : listeners) {
+        mListener.onBeforeUtteranceRequested(utteranceId, utteranceInfo);
+      }
+      int result =
+          speak(
+              text,
+              locale,
+              params,
+              utteranceId,
+              effectivePitch,
+              effectiveRate,
+              stream,
+              volume,
+              utteranceInfo,
+              eventId);
 
-    if (result != TextToSpeech.SUCCESS) {
-      localeInUse = ensureSupportedLocale();
-    }
+      if (result != TextToSpeech.SUCCESS) {
+        localeInUse = ensureSupportedLocale();
+      }
 
-    LogUtils.d(TAG, "Speak call for %s returned %d", utteranceId, result);
-    return result;
+      LogUtils.d(TAG, "Speak call for %s returned %d", utteranceId, result);
+      return result;
+    }
+  }
+
+  @ChangeLocaleAction
+  private int getChangeLocaleAction(Locale previousLocale) {
+    if (Objects.equals(localeInUse, previousLocale)) {
+      return Performance.CHANGE_LOCALE_SAME;
+    }
+    if (localeInUse == null) {
+      return Performance.CHANGE_LOCALE_UNDEFINED;
+    }
+    if (previousLocale != null
+        && Objects.equals(previousLocale.getLanguage(), localeInUse.getLanguage())) {
+      return Performance.CHANGE_LOCALE_SAME_LANGUAGE;
+    }
+    return Performance.CHANGE_LOCALE_DIFFERENT;
   }
 
   private int speak(
       CharSequence text,
+      Locale locale,
       Map<String, String> params,
       String utteranceId,
       float pitch,
       float rate,
       int stream,
       float volume,
-      boolean flushGlobalTtsQueue,
-      boolean changeToSameLocale,
+      UtteranceInfoCombo utteranceInfoCombo,
       EventId eventId) {
     Bundle bundle = new Bundle();
 
@@ -612,15 +766,120 @@ public class FailoverTextToSpeech {
 
     ensureQueueFlush();
 
-    int queueMode = flushGlobalTtsQueue ? SPEECH_FLUSH_ALL : TextToSpeech.QUEUE_ADD;
+    int queueMode =
+        utteranceInfoCombo.flushGlobalTtsQueue() ? SPEECH_FLUSH_ALL : TextToSpeech.QUEUE_ADD;
 
     // Track latency from event received to feedback queued.
     if (eventId != null && utteranceId != null) {
-      Performance.getInstance()
-          .onFeedbackQueued(eventId, utteranceId, flushGlobalTtsQueue, changeToSameLocale);
+      Performance.getInstance().onFeedbackQueued(eventId, utteranceId, utteranceInfoCombo);
     }
 
-    return mTts.speak(text, queueMode, bundle, utteranceId);
+    if (locale == null) {
+      locale = getUsedLocale();
+    }
+
+    return speakWithCacheOrTts(utteranceId, text, queueMode, locale, bundle);
+  }
+
+  private Locale getUsedLocale() {
+    synchronized (ttsLock) {
+      return cachedTtsLocale;
+    }
+  }
+
+  private final PlaybackStateListener playbackStateListener =
+      new PlaybackStateListener() {
+        @Override
+        public void onStateChanged(@Nullable String utteranceId, int state) {
+          if ((state == SpeechCachePlayer.STATE_START)) {
+            utteranceProgressCallback.onStart(utteranceId);
+          } else if (state == SpeechCachePlayer.STATE_READY) {
+            utteranceProgressCallback.onAudioCacheAvailable(utteranceId);
+          } else if (state == SpeechCachePlayer.STATE_COMPLETED) {
+            // Consume the speeches with queue_MODE_ADD.
+            List<SpeakRequest> suspendQueueCopy = new ArrayList<>(suspendQueue);
+            suspendQueue.clear();
+            for (SpeakRequest speakRequest : suspendQueueCopy) {
+              LogUtils.d(TAG, "consume suspend queue speakRequest= %s: ", speakRequest);
+              mHandler.post(
+                  () -> {
+                    if (isReady()) {
+                      attemptSetLanguage(speakRequest.locale);
+                      tts.speak(
+                          speakRequest.text,
+                          speakRequest.queueMode,
+                          speakRequest.bundle,
+                          utteranceId);
+                    }
+                  });
+            }
+            mHandler.onUtteranceCompleted(utteranceId, /* success= */ true);
+          } else if (state == SpeechCachePlayer.STATE_STOPPED) {
+            mHandler.onUtteranceCompleted(utteranceId, /* success= */ false);
+          }
+        }
+      };
+
+  private final List<SpeakRequest> suspendQueue = Collections.synchronizedList(new ArrayList<>());
+
+  /**
+   * Speaks the text with cache if possible, otherwiase fallback to {@link
+   * TextToSpeech#speak(CharSequence, int, Bundle, String)}} and drop the suspend queue if needed.
+   * If the queue mode is {@link TextToSpeech#QUEUE_ADD} and the cache is speaking, the speech will
+   * be added to the {@link #suspendQueue} and speaks until the cache is spoken completed.
+   *
+   * @param utteranceId the id to know status of the utterance when the callback is called.
+   * @param text the text to speak
+   * @param queueMode The queue mode to use.
+   * @param locale the locale to use
+   * @param bundle The bundle to use.
+   * @return The result of speaking the text.
+   */
+  private int speakWithCacheOrTts(
+      String utteranceId, CharSequence text, int queueMode, Locale locale, Bundle bundle) {
+    if (speechCacheManager == null) {
+      return tts.speak(text, queueMode, bundle, utteranceId);
+    }
+
+    if (speechCacheManager.isSpeaking()) {
+      if (queueMode == TextToSpeech.QUEUE_ADD) {
+        LogUtils.d(TAG, "speakWithCacheOrTts -- speaking cache, play %s later", utteranceId);
+        SpeakRequest speakRequest = new SpeakRequest(locale, text, queueMode, bundle, utteranceId);
+        suspendQueue.add(speakRequest);
+        return TextToSpeech.SUCCESS;
+      } else {
+        LogUtils.d(
+            TAG,
+            "speaking cache, speak %s now and clean queue size %s: ",
+            utteranceId,
+            suspendQueue.size());
+        notifyInterruptedForSuspendQueue();
+        // speak next speech immediately
+        if (speechCacheManager.speakWithSpeechCachePlayer(
+            utteranceId, queueMode, text, bundle, playbackStateListener, locale)) {
+          tts.speak("", SPEECH_FLUSH_ALL, null);
+          return TextToSpeech.SUCCESS;
+        }
+        LogUtils.d(TAG, "tts.speak, utteranceId =" + utteranceId);
+        return tts.speak(text, queueMode, bundle, utteranceId);
+      }
+    } else {
+      if (speechCacheManager.speakWithSpeechCachePlayer(
+          utteranceId, queueMode, text, bundle, playbackStateListener, locale)) {
+        tts.speak("", SPEECH_FLUSH_ALL, null);
+        return TextToSpeech.SUCCESS;
+      }
+      LogUtils.d(TAG, "tts.speak, utteranceId =" + utteranceId);
+      return tts.speak(text, queueMode, bundle, utteranceId);
+    }
+  }
+
+  private void notifyInterruptedForSuspendQueue() {
+    List<SpeakRequest> suspendQueueCopy = new ArrayList<>(suspendQueue);
+    suspendQueue.clear();
+    LogUtils.d(TAG, "notifyInterruptedForSuspendQueue suspendQueueCopy = %s", suspendQueueCopy);
+    suspendQueueCopy.forEach(
+        speakRequest -> utteranceProgressCallback.onStop(speakRequest.utteranceId, true));
   }
 
   /**
@@ -629,7 +888,7 @@ public class FailoverTextToSpeech {
    */
   private void ensureQueueFlush() {
     if (BuildVersionUtils.isM()) {
-      mTts.speak("", TextToSpeech.QUEUE_FLUSH, null, null);
+      tts.speak("", TextToSpeech.QUEUE_FLUSH, null, null);
     }
   }
 
@@ -640,14 +899,14 @@ public class FailoverTextToSpeech {
    */
   private void setTtsEngine(String engine, boolean resetFailures) {
     if (resetFailures) {
-      mTtsFailures = 0;
+      ttsFailures = 0;
     }
 
     // Always try to stop the current engine before switching.
-    TextToSpeechUtils.attemptTtsShutdown(mTts);
-    TextToSpeechUtils.attemptTtsShutdown(mTempTts);
+    TextToSpeechUtils.attemptTtsShutdown(tts);
+    TextToSpeechUtils.attemptTtsShutdown(tempTts);
 
-    if (mTempTts == null || mTempTts.getLanguage() == null) {
+    if (tempTts == null || tempTts.getLanguage() == null) {
       // The TTS instance is not existing or not responding, the service has likely stopped, so
       // dispose of our handle and create another one below.
       LogUtils.i(TAG, "Bad TextToSpeech instance detected. Re-creating.");
@@ -659,10 +918,10 @@ public class FailoverTextToSpeech {
     }
 
     LogUtils.logWithLimit(
-        TAG, Log.INFO, mTtsFailures, MAX_LOG_MESSAGES, "Switching to TTS engine: %s", engine);
+        TAG, Log.INFO, ttsFailures, MAX_LOG_MESSAGES, "Switching to TTS engine: %s", engine);
 
-    mTempTtsEngine = engine;
-    mTempTts = new TextToSpeech(mContext, mTtsChangeListener, engine);
+    tempTtsEngine = engine;
+    tempTts = new TextToSpeech(context, mTtsChangeListener, engine);
   }
 
   /**
@@ -674,28 +933,28 @@ public class FailoverTextToSpeech {
     LogUtils.logWithLimit(
         TAG,
         Log.ERROR,
-        mTtsFailures,
+        ttsFailures,
         MAX_LOG_MESSAGES,
         "Attempting TTS failover from %s",
         failedEngine);
 
-    mTtsFailures++;
+    ttsFailures++;
 
     // If there is only one installed engine, or if the current engine
     // hasn't failed enough times, just restart the current engine.
-    if ((mInstalledTtsEngines.size() <= 1) || (mTtsFailures < MAX_TTS_FAILURES)) {
+    if ((installedTtsEngines.size() <= 1) || (ttsFailures < MAX_TTS_FAILURES)) {
       setTtsEngine(failedEngine, false);
       return;
     }
 
     // Move the engine to the back of the list.
     if (failedEngine != null) {
-      mInstalledTtsEngines.remove(failedEngine);
-      mInstalledTtsEngines.addLast(failedEngine);
+      installedTtsEngines.remove(failedEngine);
+      installedTtsEngines.addLast(failedEngine);
     }
 
     // Try to use the first available TTS engine.
-    final String nextEngine = mInstalledTtsEngines.getFirst();
+    final String nextEngine = installedTtsEngines.getFirst();
 
     setTtsEngine(nextEngine, true);
   }
@@ -707,41 +966,44 @@ public class FailoverTextToSpeech {
    */
   @SuppressWarnings("deprecation")
   private void handleTtsInitialized(int status) {
-    if (mTempTts == null) {
+    if (tempTts == null) {
       LogUtils.e(TAG, "Attempted to initialize TTS more than once!");
       return;
     }
 
-    final TextToSpeech tempTts = mTempTts;
-    final String tempTtsEngine = mTempTtsEngine;
+    final TextToSpeech tempTts = this.tempTts;
+    final String tempTtsEngine = this.tempTtsEngine;
 
-    mTempTts = null;
-    mTempTtsEngine = null;
-    cachedTtsLocale = null;
+    this.tempTts = null;
+    this.tempTtsEngine = null;
+
+    synchronized (ttsLock) {
+      cachedTtsLocale = null;
+    }
 
     if (status != TextToSpeech.SUCCESS) {
       attemptTtsFailover(tempTtsEngine);
       return;
     }
 
-    final boolean isSwitchingEngines = (mTts != null);
+    final boolean isSwitchingEngines = (tts != null);
 
     if (isSwitchingEngines) {
-      TextToSpeechUtils.attemptTtsShutdown(mTts);
+      TextToSpeechUtils.attemptTtsShutdown(tts);
     }
 
-    mTts = tempTts;
-    mTts.setOnUtteranceProgressListener(mUtteranceProgressListener);
+    tts = tempTts;
+    tts.setOnUtteranceProgressListener(utteranceProgressCallback);
 
     if (tempTtsEngine == null) {
-      mTtsEngine = TextToSpeechCompatUtils.getCurrentEngine(mTts);
+      ttsEngine = TextToSpeechCompatUtils.getCurrentEngine(tts);
     } else {
-      mTtsEngine = tempTtsEngine;
+      ttsEngine = tempTtsEngine;
     }
 
     updateDefaultLocale();
 
-    mTts.setAudioAttributes(
+    tts.setAudioAttributes(
         new AudioAttributes.Builder()
             .setUsage(AudioAttributes.USAGE_ASSISTANCE_ACCESSIBILITY)
             .setFlags(AudioAttributes.FLAG_LOW_LATENCY)
@@ -752,6 +1014,58 @@ public class FailoverTextToSpeech {
     for (FailoverTtsListener mListener : listeners) {
       mListener.onTtsInitialized(isSwitchingEngines, tempTtsEngine);
     }
+  }
+
+  /**
+   * Adds a speech to the speech cache.
+   *
+   * @param text the text to be spoken
+   * @param pitch the pitch of the utterance
+   * @param rate the speech rate of the utterance
+   * @param resultNotifier the callback to notify whether the speech cache is loaded or failed.
+   * @param eventId the event id triggering this action, used for logging
+   */
+  void addSpeech(
+      CharSequence text,
+      LoadSpeechResultNotifier resultNotifier,
+      float pitch,
+      float rate,
+      @Nullable EventId eventId) {
+    if (!isReady()) {
+      LogUtils.e(TAG, "addSpeech TTS is not ready: text=" + text);
+      resultNotifier.onFinished(
+          new SpeechInfo(text, /* utteranceId= */ null, /* locale= */ null, pitch, rate), false);
+      return;
+    }
+    if (speechCacheManager == null) {
+      return;
+    }
+    Locale locale = null;
+    if (text instanceof Spannable spannable) {
+      TtsSpan[] ttsSpans = spannable.getSpans(0, text.length(), TtsSpan.class);
+      if (ttsSpans.length > 0) {
+        resultNotifier.onFinished(null, false);
+        return;
+      }
+      LocaleSpan[] spans = spannable.getSpans(0, text.length(), LocaleSpan.class);
+      if (spans.length > 1) {
+        return;
+      }
+      if (spans.length == 1) {
+        locale = spans[0].getLocale();
+      }
+    }
+    if (locale == null) {
+      locale = getUsedLocale();
+    }
+
+    Bundle bundle = new Bundle();
+    float effectiveRate = rate * defaultRate;
+    float effectivePitch = pitch * defaultPitch;
+    bundle.putInt(FailoverTextToSpeech.SpeechParam.PITCH, (int) (effectivePitch * 100));
+    bundle.putInt(FailoverTextToSpeech.SpeechParam.RATE, (int) (effectiveRate * 100));
+    bundle.putFloat(FailoverTextToSpeech.SpeechParam.VOLUME, 1.0f);
+    speechCacheManager.addSpeechCache(this, text, locale, resultNotifier, bundle, ttsEngine);
   }
 
   /**
@@ -794,7 +1108,7 @@ public class FailoverTextToSpeech {
    */
   private void handleUtteranceCompleted(String utteranceId, boolean success) {
     if (success) {
-      mTtsFailures = 0;
+      ttsFailures = 0;
     }
     allowDeviceSleep(utteranceId);
     for (FailoverTtsListener mListener : listeners) {
@@ -809,43 +1123,43 @@ public class FailoverTextToSpeech {
    */
   private void handleMediaStateChanged(String action) {
     if (Intent.ACTION_MEDIA_UNMOUNTED.equals(action)) {
-      if (!TextUtils.equals(mSystemTtsEngine, mTtsEngine)) {
+      if (!TextUtils.equals(systemTtsEngine, ttsEngine)) {
         // Temporarily switch to the system TTS engine.
         LogUtils.v(TAG, "Saw media unmount");
-        setTtsEngine(mSystemTtsEngine, true);
+        setTtsEngine(systemTtsEngine, true);
       }
     }
 
     if (Intent.ACTION_MEDIA_MOUNTED.equals(action)) {
-      if (!TextUtils.equals(mDefaultTtsEngine, mTtsEngine)) {
+      if (!TextUtils.equals(defaultTtsEngine, ttsEngine)) {
         // Try to switch back to the default engine.
         LogUtils.v(TAG, "Saw media mount");
-        setTtsEngine(mDefaultTtsEngine, true);
+        setTtsEngine(defaultTtsEngine, true);
       }
     }
   }
 
   public void updateDefaultEngine() {
-    final ContentResolver resolver = mContext.getContentResolver();
+    final ContentResolver resolver = context.getContentResolver();
 
     // Always refresh the list of available engines, since the user may have
     // installed a new TTS and then switched to it.
-    mInstalledTtsEngines.clear();
-    mSystemTtsEngine =
+    installedTtsEngines.clear();
+    systemTtsEngine =
         TextToSpeechUtils.reloadInstalledTtsEngines(
-            mContext.getPackageManager(), mInstalledTtsEngines);
+            context.getPackageManager(), installedTtsEngines);
 
     // This may be null if the user hasn't specified an engine.
-    mDefaultTtsEngine = Secure.getString(resolver, Secure.TTS_DEFAULT_SYNTH);
+    defaultTtsEngine = Secure.getString(resolver, Secure.TTS_DEFAULT_SYNTH);
 
     // Switch engines when the system default changes and it's not the current engine.
-    if (mTtsEngine == null || !mTtsEngine.equals(mDefaultTtsEngine)) {
-      if (mInstalledTtsEngines.contains(mDefaultTtsEngine)) {
+    if (ttsEngine == null || !ttsEngine.equals(defaultTtsEngine)) {
+      if (installedTtsEngines.contains(defaultTtsEngine)) {
         // Can load the default engine.
-        setTtsEngine(mDefaultTtsEngine, true);
-      } else if (!mInstalledTtsEngines.isEmpty()) {
+        setTtsEngine(defaultTtsEngine, true);
+      } else if (!installedTtsEngines.isEmpty()) {
         // We'll take whatever TTS we can get.
-        setTtsEngine(mInstalledTtsEngines.get(0), true);
+        setTtsEngine(installedTtsEngines.getFirst(), true);
       }
     }
   }
@@ -855,7 +1169,10 @@ public class FailoverTextToSpeech {
    * during the next call to {@link #trySpeak}.
    */
   private void updateDefaultPitch() {
-    mDefaultPitch = (Secure.getInt(mResolver, Secure.TTS_DEFAULT_PITCH, 100) / 100.0f);
+    defaultPitch = (Secure.getInt(resolver, Secure.TTS_DEFAULT_PITCH, 100) / 100.0f);
+    for (FailoverTtsListener listener : listeners) {
+      listener.onDefaultPitchChanged(defaultPitch);
+    }
   }
 
   /**
@@ -863,7 +1180,10 @@ public class FailoverTextToSpeech {
    * during the next call to {@link #trySpeak}.
    */
   private void updateDefaultRate() {
-    mDefaultRate = (Secure.getInt(mResolver, Secure.TTS_DEFAULT_RATE, 100) / 100.0f);
+    defaultRate = (Secure.getInt(resolver, Secure.TTS_DEFAULT_RATE, 100) / 100.0f);
+    for (FailoverTtsListener listener : listeners) {
+      listener.onDefaultRateChanged(defaultRate);
+    }
   }
 
   /** Preferred locale for fallback language. */
@@ -921,20 +1241,20 @@ public class FailoverTextToSpeech {
   private boolean needsFallbackLocale() {
     // If the user isn't using Google TTS, or if they set a preferred
     // locale, we do not need to check locale support.
-    if (!PACKAGE_GOOGLE_TTS.equals(mTtsEngine) || (mDefaultLocale != null)) {
+    if (!Objects.equals(ttsEngine, PACKAGE_GOOGLE_TTS) || (mDefaultLocale != null)) {
       return false;
     }
 
-    if (mTts == null) {
+    if (tts == null) {
       return false;
     }
 
     // Otherwise, the TTS engine will attempt to use the system locale which
     // may not be supported. If the locale is embedded or advertised as
     // available, we're fine.
-    final Set<String> features = mTts.getFeatures(mSystemLocale);
+    final Set<String> features = tts.getFeatures(mSystemLocale);
     return !(((features != null) && features.contains(Engine.KEY_FEATURE_EMBEDDED_SYNTHESIS))
-        || !isNotAvailableStatus(mTts.isLanguageAvailable(mSystemLocale)));
+        || !isNotAvailableStatus(tts.isLanguageAvailable(mSystemLocale)));
   }
 
   /** Attempts to obtain and set a fallback TTS locale. */
@@ -960,7 +1280,7 @@ public class FailoverTextToSpeech {
       LogUtils.w(TAG, "Cannot set null locale.");
       return null;
     }
-    if (mTts == null) {
+    if (tts == null) {
       LogUtils.e(TAG, "mTts null when setting locale.");
       return null;
     }
@@ -975,27 +1295,62 @@ public class FailoverTextToSpeech {
     return locale;
   }
 
-  private int setTtsLocale(Locale locale) {
-    LogUtils.d(TAG, "set ttsLocale: cachedlocale=%s with locale %s", cachedTtsLocale, locale);
-    if (cachedTtsLocale != null && cachedTtsLocale.equals(locale)) {
-      return LANG_AVAILABLE;
+  /**
+   * Synthesizes the speech to file with the given locale. If the locale is not set, then it will be
+   * {@link #cachedTtsLocale}, the current locale used in {@link TextToSpeech}.
+   */
+  @WorkerThread
+  protected boolean synthesizeToFile(
+      final CharSequence text,
+      @Nullable Locale textLocale,
+      final Bundle params,
+      final File file,
+      final String utteranceId) {
+    if (!isReady()) {
+      return false;
     }
+    synchronized (ttsLock) {
+      if (textLocale != null) {
+        Locale actualLocale = attemptSetLanguage(textLocale);
+        if (actualLocale == null) {
+          return false;
+        }
+        mLastUtteranceLocale = actualLocale;
+      }
+      // Use getter to override it in testing.
+      if (getEngineInstance().synthesizeToFile(text, params, file, utteranceId)
+          == TextToSpeech.SUCCESS) {
+        return true;
+      }
+      return false;
+    }
+  }
 
-    int status = mTts.setLanguage(locale);
-    LogUtils.d(TAG, "set ttsLocale: %s with status %s", locale, status);
-    if (cacheTtsLocale && !isNotAvailableStatus(status)) {
-      cachedTtsLocale = locale;
+  private int setTtsLocale(Locale locale) {
+    synchronized (ttsLock) {
+      if (cachedTtsLocale != null && cachedTtsLocale.equals(locale)) {
+        return LANG_AVAILABLE;
+      }
+
+      int status = tts.setLanguage(locale);
+      LogUtils.d(TAG, "set ttsLocale: %s with status %s", locale, status);
+      if (!isNotAvailableStatus(status)) {
+        cachedTtsLocale = locale;
+      }
+      return status;
     }
-    return status;
   }
 
   /** Dumps the important variables for debugging. */
   public void dump(Logger dumpLogger) {
-    dumpLogger.log(" cachedTtsLocale=%s", toLanguageTag(cachedTtsLocale));
+    dumpLogger.log(" cachedTtsLocale=%s", getUsedLocale());
     dumpLogger.log(" mDefaultLocale=%s", toLanguageTag(mDefaultLocale));
     dumpLogger.log(" mSystemLocale=%s", toLanguageTag(mSystemLocale));
     dumpLogger.log(" mLastUtteranceLocale=%s", toLanguageTag(mLastUtteranceLocale));
     dumpLogger.log(" getVoice=%s", getTtsVoice());
+    if (speechCacheManager != null) {
+      speechCacheManager.dumpCachedSpeechInfo(dumpLogger);
+    }
   }
 
   private String toLanguageTag(@Nullable Locale locale) {
@@ -1003,7 +1358,7 @@ public class FailoverTextToSpeech {
   }
 
   private @Nullable Voice getTtsVoice() {
-    return mTts != null ? mTts.getVoice() : null;
+    return tts != null ? tts.getVoice() : null;
   }
 
   /**
@@ -1012,12 +1367,12 @@ public class FailoverTextToSpeech {
    * likely be enough to understand what's on the screen.
    */
   private @Nullable Locale getBestAvailableLocale() {
-    if (mTts == null) {
+    if (tts == null) {
       return null;
     }
 
     // Always attempt to use the preferred locale first.
-    if (mTts.isLanguageAvailable(PREFERRED_FALLBACK_LOCALE) >= 0) {
+    if (tts.isLanguageAvailable(PREFERRED_FALLBACK_LOCALE) >= 0) {
       return PREFERRED_FALLBACK_LOCALE;
     }
 
@@ -1028,7 +1383,7 @@ public class FailoverTextToSpeech {
 
     final Locale[] locales = Locale.getAvailableLocales();
     for (Locale locale : locales) {
-      final int status = mTts.isLanguageAvailable(locale);
+      final int status = tts.isLanguageAvailable(locale);
       if (isNotAvailableStatus(status)) {
         continue;
       }
@@ -1048,7 +1403,7 @@ public class FailoverTextToSpeech {
    * system locale.
    */
   private @Nullable Locale attemptRestorePreferredLocale() {
-    if (mTts == null) {
+    if (tts == null) {
       return null;
     }
     mLastUtteranceLocale = null;
@@ -1069,7 +1424,7 @@ public class FailoverTextToSpeech {
 
   /** Handles updating the default locale. */
   private void updateDefaultLocale() {
-    final String defaultLocale = TextToSpeechUtils.getDefaultLocaleForEngine(mResolver, mTtsEngine);
+    final String defaultLocale = TextToSpeechUtils.getDefaultLocaleForEngine(resolver, ttsEngine);
     mDefaultLocale = !TextUtils.isEmpty(defaultLocale) ? forLanguageTag(defaultLocale) : null;
 
     // The default locale changed, which may mean we can restore the user's
@@ -1094,14 +1449,14 @@ public class FailoverTextToSpeech {
   /** Registers the configuration change callback. */
   private void registerGoogleTtsFixCallbacks() {
     final Uri defaultLocaleUri = Secure.getUriFor(SecureCompatUtils.TTS_DEFAULT_LOCALE);
-    mResolver.registerContentObserver(defaultLocaleUri, false, mLocaleObserver);
-    mContext.registerComponentCallbacks(mComponentCallbacks);
+    resolver.registerContentObserver(defaultLocaleUri, false, mLocaleObserver);
+    context.registerComponentCallbacks(mComponentCallbacks);
   }
 
   /** Unregisters the configuration change callback. */
   private void unregisterGoogleTtsFixCallbacks() {
-    mResolver.unregisterContentObserver(mLocaleObserver);
-    mContext.unregisterComponentCallbacks(mComponentCallbacks);
+    resolver.unregisterContentObserver(mLocaleObserver);
+    context.unregisterComponentCallbacks(mComponentCallbacks);
   }
 
   /**
@@ -1183,75 +1538,87 @@ public class FailoverTextToSpeech {
       };
 
   /**
-   * A listener for {@code TextToSpeech} progress.
+   * A callback for speech progress of {@link TextToSpeech} and {@link SpeechCacheManager}.
    *
    * <p><strong>Note: </strong> By default, the callback is invoked in TTS thread and we hand over
-   * the message to main thread for processing. In some special cases when we want to handle the
-   * callback in TTS thread, call {@link #setHandleTtsCallbackInMainThread(boolean)}.
+   * the message to handler thread for processing. In some special cases when we want to handle the
+   * callback in TTS thread, call {@link #setHandleTtsCallbackInHandlerThread(boolean)}.
    */
-  private final UtteranceProgressListener mUtteranceProgressListener =
-      new UtteranceProgressListener() {
-        private @Nullable String mLastUpdatedUtteranceId = null;
+  private class UtteranceProgressCallback extends UtteranceProgressListener {
+    private @Nullable String lastUpdatedUtteranceId = null;
 
-        private void updatePerformanceMetrics(String utteranceId) {
-          // Update performance for this utterance, only if we did not recently update
-          // for the same utterance.
-          if (utteranceId != null && !utteranceId.equals(mLastUpdatedUtteranceId)) {
-            Performance.getInstance().onFeedbackOutput(utteranceId);
-          }
-          mLastUpdatedUtteranceId = utteranceId;
-        }
+    private void updatePerformanceMetrics(String utteranceId, boolean localCache) {
+      // Update performance for this utterance, only if we did not recently update
+      // for the same utterance.
+      if (utteranceId != null && !utteranceId.equals(lastUpdatedUtteranceId)) {
+        Performance.getInstance().onFeedbackOutput(utteranceId, localCache);
+      }
+      lastUpdatedUtteranceId = utteranceId;
+    }
 
-        private void handleUtteranceCompleted(String utteranceId, boolean success) {
-          LogUtils.d(TAG, "Received callback for \"%s\", returned %b", utteranceId, success);
-          if (mShouldHandleTtsCallbackInMainThread) {
-            // Hand utterance completed processing to the main thread.
-            mHandler.onUtteranceCompleted(utteranceId, success);
-          } else {
-            FailoverTextToSpeech.this.handleUtteranceCompleted(utteranceId, success);
-          }
-        }
+    @Override
+    public void onStart(String utteranceId) {
+      if (utteranceId.startsWith(CACHE_UTTERANCE_ID_PREFIX)) {
+        return;
+      }
+      Performance.getInstance().onFeedbackReady(utteranceId);
+      if (shouldHandleTtsCallbackInHandlerThread) {
+        mHandler.onUtteranceStarted(utteranceId);
+      } else {
+        FailoverTextToSpeech.this.handleUtteranceStarted(utteranceId, /* delay= */ 0);
+      }
+    }
 
-        @Override
-        public void onStart(String utteranceId) {
-          if (mShouldHandleTtsCallbackInMainThread) {
-            mHandler.onUtteranceStarted(utteranceId);
-          } else {
-            FailoverTextToSpeech.this.handleUtteranceStarted(utteranceId, /* delay= */ 0);
-          }
-        }
+    @Override
+    public void onAudioAvailable(String utteranceId, byte[] audio) {
+      // onAudioAvailable() is usually called many times per utterance,
+      // once for each audio chunk.
+      updatePerformanceMetrics(utteranceId, /* localCache= */ false);
+    }
 
-        @Override
-        public void onAudioAvailable(String utteranceId, byte[] audio) {
-          // onAudioAvailable() is usually called many times per utterance,
-          // once for each audio chunk.
-          updatePerformanceMetrics(utteranceId);
-        }
+    void onAudioCacheAvailable(String utteranceId) {
+      // onAudioAvailable() is usually called many times per utterance,
+      // once for each audio chunk.
+      updatePerformanceMetrics(utteranceId, /* localCache= */ true);
+    }
 
-        @Override
-        public void onRangeStart(String utteranceId, int start, int end, int frame) {
-          if (mShouldHandleTtsCallbackInMainThread) {
-            mHandler.onUtteranceRangeStarted(utteranceId, start, end);
-          } else {
-            FailoverTextToSpeech.this.handleUtteranceRangeStarted(utteranceId, start, end);
-          }
-        }
+    @Override
+    public void onRangeStart(String utteranceId, int start, int end, int frame) {
+      Performance.getInstance().onFeedbackRangeStarted(utteranceId);
+      if (shouldHandleTtsCallbackInHandlerThread) {
+        mHandler.onUtteranceRangeStarted(utteranceId, start, end);
+      } else {
+        FailoverTextToSpeech.this.handleUtteranceRangeStarted(utteranceId, start, end);
+      }
+    }
 
-        @Override
-        public void onStop(String utteranceId, boolean interrupted) {
-          handleUtteranceCompleted(utteranceId, /* success= */ !interrupted);
-        }
+    @Override
+    public void onStop(String utteranceId, boolean interrupted) {
+      if (speechCacheManager != null && speechCacheManager.handleOnStop(utteranceId, interrupted)) {
+        return;
+      }
+      handleUtteranceCompleted(utteranceId, /* success= */ !interrupted);
+    }
 
-        @Override
-        public void onError(String utteranceId) {
-          handleUtteranceCompleted(utteranceId, /* success= */ false);
-        }
+    @Override
+    public void onError(String utteranceId) {
+      if (speechCacheManager != null && speechCacheManager.handleOnError(utteranceId)) {
+        return;
+      }
+      handleUtteranceCompleted(utteranceId, /* success= */ false);
+    }
 
-        @Override
-        public void onDone(String utteranceId) {
-          handleUtteranceCompleted(utteranceId, /* success= */ true);
-        }
-      };
+    @Override
+    public void onDone(String utteranceId) {
+      if (speechCacheManager != null && speechCacheManager.handleOnDone(utteranceId)) {
+        return;
+      }
+      handleUtteranceCompleted(utteranceId, /* success= */ true);
+    }
+  }
+
+  private final UtteranceProgressCallback utteranceProgressCallback =
+      new UtteranceProgressCallback();
 
   /**
    * When changing TTS engines, switches the active TTS engine when the new engine is initialized.
@@ -1326,25 +1693,20 @@ public class FailoverTextToSpeech {
     @Override
     public void handleMessage(Message msg, FailoverTextToSpeech parent) {
       switch (msg.what) {
-        case MSG_INITIALIZED:
-          parent.handleTtsInitialized(msg.arg1);
-          break;
-        case MSG_UTTERANCE_STARTED:
+        case MSG_INITIALIZED -> parent.handleTtsInitialized(msg.arg1);
+        case MSG_UTTERANCE_STARTED -> {
           long talkbackDelay = SystemClock.uptimeMillis() - msg.getWhen();
           parent.handleUtteranceStarted((String) msg.obj, talkbackDelay);
-          break;
-        case MSG_UTTERANCE_COMPLETED:
+        }
+        case MSG_UTTERANCE_COMPLETED -> {
           Pair<String, Boolean> data = (Pair<String, Boolean>) msg.obj;
           parent.handleUtteranceCompleted(
               /* utteranceId= */ data.first, /* success= */ data.second);
-          break;
-        case MSG_MEDIA_STATE_CHANGED:
-          parent.handleMediaStateChanged((String) msg.obj);
-          break;
-        case MSG_UTTERANCE_RANGE_STARTED:
-          parent.handleUtteranceRangeStarted((String) msg.obj, msg.arg1, msg.arg2);
-          break;
-        default: // fall out
+        }
+        case MSG_MEDIA_STATE_CHANGED -> parent.handleMediaStateChanged((String) msg.obj);
+        case MSG_UTTERANCE_RANGE_STARTED ->
+            parent.handleUtteranceRangeStarted((String) msg.obj, msg.arg1, msg.arg2);
+        default -> {}
       }
     }
 
@@ -1403,6 +1765,12 @@ public class FailoverTextToSpeech {
      * Called after an utterance has completed speaking.
      */
     void onUtteranceCompleted(String utteranceId, boolean success);
+
+    /** Called when the default pitch changes. */
+    default void onDefaultPitchChanged(float pitch) {}
+
+    /** Called when the default rate changes. */
+    default void onDefaultRateChanged(float rate) {}
   }
 
   /** Details of the utterance that is sent to the TTS engine. */
@@ -1420,15 +1788,27 @@ public class FailoverTextToSpeech {
 
     public abstract boolean flushGlobalTtsQueue();
 
+    @ChangeLocaleAction
+    public abstract int changeLocaleAction();
+
     public static Builder builder(
         CharSequence text, @Nullable Locale locale, boolean isLocaleAttached) {
+      return builder(text, locale, isLocaleAttached, Performance.CHANGE_LOCALE_NONE);
+    }
+
+    public static Builder builder(
+        CharSequence text,
+        @Nullable Locale locale,
+        boolean isLocaleAttached,
+        @ChangeLocaleAction int changeLocaleAction) {
       return new AutoValue_FailoverTextToSpeech_UtteranceInfoCombo.Builder()
           .setText(text)
           .setLocale(locale)
           .setIsLocaleAttached(isLocaleAttached)
           .setIsSeparatorInUtterance(false)
           .setIsAggressiveChunking(false)
-          .setFlushGlobalTtsQueue(true);
+          .setFlushGlobalTtsQueue(true)
+          .setChangeLocaleAction(changeLocaleAction);
     }
 
     /** Builders of the utterance info combo. */
@@ -1446,7 +1826,14 @@ public class FailoverTextToSpeech {
 
       public abstract Builder setFlushGlobalTtsQueue(boolean value);
 
+      public abstract Builder setChangeLocaleAction(@ChangeLocaleAction int changeLocaleAction);
+
       public abstract UtteranceInfoCombo build();
     }
   }
+
+  /** Details of the utterance that is sent to the TTS engine. */
+  public record SpeakRequest(
+      Locale locale, CharSequence text, int queueMode, Bundle bundle, String utteranceId) {}
+
 }
